test_cases/fail/f30.lxr
SCRIPT AREA
START SCRIPT
DECLARE FLOAT f
f='A'
END SCRIPT
